kustomize/overlay/staging/test-react-project-121321-staging-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: test-react-project-121321-staging
  labels:
    organizationId: org_214f8824-489e-4427-b043-83252b36ac2b
    projectId: project_cd3d5691-e552-40b9-95d3-a6c97549b15d
    environmentId: env_cf468b3d-9d1c-4b10-ba28-a71e02f945bd
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_cf468b3d-9d1c-4b10-ba28-a71e02f945bd
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
